static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

body {
    min-height: 100vh;
    background-color: rgba(241, 183, 183, 0.29);
}


/* Navigation */

header nav {
    padding: 0 30px;
}

nav.custom-bg {
    background-color: rgba(255, 255, 255, 0.28);
    backdrop-filter: blur(12px);
}

header .sidenav {
    background: rgba(243, 222, 222, 0.3);
    backdrop-filter: blur(35px);
}

header .brand-logo,
.sidenav-logo,
.hamburger {
    color: #6A7359;
}

header ul .menu-link {
    color: #6A7359;
    font-weight: 600;
    font-size: 1.1em;
}

header .brand-logo,
.sidenav-logo {
    font-size: 2em;
    font-weight: 800;
}

/* Custom text-shadow */

.text-shadow {
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

/* Register */

.content-container {
    min-height: 70vh;
    padding-top: 35px;
}

/* Full page background */

.register-bg {
    background: url(../images/register-bg.jpg) no-repeat center center fixed;
    background-size: cover;
}

.container .flash-message {
    font-size: 1.4em;
    color: #515251;
    background-color: #f48b89;
    padding: 15px 0;
    margin-left: 30px;
    margin-right: 30px;
    border-radius: 24px;
}

.container .page-heading {
    padding: 15px 0;
    margin-top: 30px;
    background: rgba(255, 255, 255, 0.4);
    backdrop-filter: blur(25px);
    border-radius: 24px;
    font-size: 2em;
    font-weight: 900;
    color: #6A7359;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
    letter-spacing: 1px;
}

.container .form-container {
    width: 100%;
    min-height: inherit;
    position: relative;
    overflow: hidden;
}

.form-container .form-row {
    width: 100%;
}

.form-container .card-panel {
    background-color: rgba(255, 255, 255, 0.8);
    backdrop-filter: blur(50px);
    border-radius: 24px;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
}

.form-container .form-icon {
    color: #6A7359;
}

.form-container .btn-register {
    padding: 12px 30px;
    border-radius: 20px;
    outline: 0;
    border: none;
    font-size: 1.1em;
    font-weight: 500;
    color: #fff;
    background-color: #6A7359;
    transition: 0.2s linear;
}

.form-container .btn-register:hover {
    cursor: pointer;
    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.4);
    background-color: #515251;
}

/* Custom disabled button */
.btn-disabled {
    opacity: 0.5;
    pointer-events: none;
}

.form-container p {
    color: #6A7359;
    font-weight: 400;
    font-size: 1.1em;
}

/* Login */

.form-container .form-heading {
    color: #6A7359;
    font-weight: 500;
    letter-spacing: 2px;
    font-size: 1.4em;
    line-height: 35px;
}

.form-container .card-panel-login {
    background: rgba(255, 255, 255, 0.4);
    backdrop-filter: blur(14px);

}

.circle-top,
.circle-bottom {
    position: absolute;
    width: 200px;
    height: 200px;
    border-radius: 50%;
    z-index: -1;
}

.circle-top {
    top: -90px;
    left: -80px;
    background: linear-gradient(320deg, #eab0b1, #ffdfdf33, #ffffffb0);
}

.circle-bottom {
    bottom: -90px;
    right: -65px;
    background: linear-gradient(100deg, #eab0b1, #ffdfdf33, #ffffffb0);
}

/* Profile */

.my-recipes-heading {
    color: #515251;
}


.btn-add-recipe {
    padding: 10px 20px;
    background-color: #fff;
    color: #6A7359;
    border-radius: 12px;
    font-size: 1.1em;
    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
    transition: 0.4s ease;
}

.btn-add-recipe:hover {
    color: #fff;
    background-color: #6A7359;
}

.my-recipes {
    width: 100%;
    min-height: 56vh;
    padding: 50px 0;
}

/* Credit Online Tutorials for the code below: https://www.youtube.com/watch?v=8b2mTq0Xrtw&list=LL&index=17 */

.recipe-card {
    position: relative;
    max-width: 300px;
    height: 160px;
    background-color: #f5e9e9;
    border-radius: 10px;
    margin: 30px 10px;
    padding: 20px 15px;
    display: flex;
    flex-direction: column;
    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
    transition: 0.3s ease-in-out;
}

.recipe-card:hover {
    height: 350px;
}

.recipe-card .img-box {
    position: relative;
    width: 100%;
    height: 140px;
    top: -60px;
    z-index: 1;
    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
}

.recipe-card .img-box .img {
    max-width: 100%;
    border-radius: 4px;
    object-fit: cover;
}

.recipe-card .content {
    position: relative;
    margin-top: -140px;
    padding: 10px 15px;
    text-align: center;
    color: #6A7359;
    visibility: hidden;
    opacity: 0;
    transition: 0.3s ease-in-out;
}

.recipe-card:hover .content {
    visibility: visible;
    opacity: 1;
    margin-top: -40px;
    transition-delay: 0.3s;
}

.recipe-card .content .recipe-heading {
    font-size: 1.4em;
    font-weight: 900;
}

.recipe-card .content .category-name {
    font-size: 1.2em;
    font-weight: 600;
    margin-bottom: 35px;
}

.recipe-card .content .full-recipe-btn {
    padding: 10px 20px;
    background-color: #515251;
    color: #fff;
    border-radius: 12px;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
}

/* Add Recipe */

/* change color of materialize select option */

.dropdown-content li>a, .dropdown-content li>span {
    color: #6A7359;
}

/* change color of materialize select label  */
.input-field>label {
    color: #515251;
}

/* Add ingredient button and add step btn */
.add-ingredient-btn, 
.add-step-btn {
    padding: 10px 15px;
    border-radius: 12px;
    color: #fff;
    background-color: #515251;
    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3);
    transition: 0.3s ease;
}

.add-ingredient-btn:hover, 
.add-step-btn:hover {
    background-color: #6A7359;
}

.btn-row {
    padding-top: 50px;
}

.btn-row .add-recipe-btn {
    padding: 15px 20px;
    color: #fff;
    border: none;
    border-radius: 8px;
    outline: none;
    background-color: #515251;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
    cursor: pointer;
    transition: 0.3s ease;
}

.btn-row .cancel-btn {
    padding: 15px 20px;
    border-radius: 8px;
    background-color: #6A7359;
    color: #fff;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
}

.remove-field,
.remove-step {
    float: right;
    padding: 8px 15px;
    background-color: #e06666;
    color: #fff;
    border-radius: 8px;
    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3);
    transition: 0.3s ease;
}

.remove-field:hover,
.remove-step:hover {
    background-color: #da3d3d;
}

/* Footer */

.page-footer {
    background: linear-gradient(69deg, rgb(239, 191, 191), rgba(176, 188, 194, 0.61));
    padding: 20px 0;
}

.page-footer .social-heading {
    margin-bottom: 20px;
}

.page-footer .btn-newsletter {
    border-radius: 12px;
    margin-top: 5px;
}

.page-footer .social-box {
    padding-top: 5px;
}

.page-footer .social-links {
    padding: 10px;
}

.social-links i {
    color: #6A7359;
    font-size: 1.7em;
    transition: 0.2s ease;
}

.social-links:hover i {
    transform: scale(1.2);
    color: #515251;
}

.page-footer .img-box {
    max-width: 100px;
    max-height: 100px;
    margin: 0 auto;
    margin-top: 10px;
}

/* Remove width and height from sidenav-overlay */
/* From https://stackoverflow.com/questions/38642911/how-to-disable-sidenav-overlay-in-materializecss */

.sidenav-overlay {
    width: 0;
    height: 0;
}

/* Media Queries */

/* From https://www.w3schools.com/howto/howto_css_media_query_breakpoints.asp */

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {

    header nav {
        padding: 0;
    }

    .form-container {
        padding: 35px 0;
    }
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {

    .content-container {
        min-height: 65vh;
    }
}


/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {

    .content-container {
        min-height: 70vh;
    }
}

